# douban-kg-system

./: .gitignore  .python-version  README.md  main.py  pyproject.toml
db-backend/: README.md  main.py  pyproject.toml
db-backend/app/: config.py  dependencies.py  main.py  recommendation_cache.py
db-backend/app/algorithms/: __init__.py  base.py  cfkg.py  common.py  content_based.py  evaluator.py  graph_cache.py  graph_cf.py  graph_content.py  graph_ppr.py  hybrid_manager.py  item_cf.py  kg_embed.py  kg_path.py  tfidf_content.py
db-backend/app/db/: __init__.py  mysql.py  neo4j.py
db-backend/app/models/: __init__.py  admin.py  graph.py  movie.py  person.py  user.py
db-backend/app/routers/: __init__.py  admin_auth.py  admin_users.py  auth.py  graph.py  movies.py  persons.py  proxy.py  recommend.py  stats.py  users.py
db-backend/app/seed/: __init__.py  recommendation_users.py
db-backend/app/services/: __init__.py  admin_service.py  auth_service.py  douban_public_import.py  graph_service.py  movie_service.py  person_service.py  recommend_service.py  user_service.py
db-backend/migrations/: 001_create_user_tables.sql  002_create_admin_tables.sql  003_add_mock_user_flag.sql  003_add_users_is_mock.sql
db-backend/reports/: README.md  eval_results.json  eval_results.md  eval_results_cfkg_neg499.md  eval_results_cfkg_neg499_legacy.json  eval_results_kg_embed_neg499.md  eval_results_kg_path.md  eval_results_kg_path_legacy.md  eval_results_kg_path_neg499.json  eval_results_kg_path_neg499_legacy.json  eval_results_legacy.md  eval_results_neg499.md  eval_results_neg499_legacy.json  online_acceptance_kg_2026-04-12.json  online_acceptance_kg_2026-04-12.md  online_acceptance_kg_2026-04-12_v2.json  online_acceptance_kg_2026-04-12_v2.md  online_acceptance_kg_rerun_2026-04-12.json  recommendation_eval_latest.json  recommendation_eval_latest.md
db-backend/reports/history/: 2026-03-12_192050_eval_results.json  2026-03-12_192050_eval_results.md  2026-03-12_192050_eval_results_legacy.json  2026-03-12_192050_eval_results_legacy.md  2026-03-12_validation-5seed_after-optimization.json  2026-03-12_validation-5seed_after-optimization.md  2026-03-12_validation-5seed_after-optimization_legacy.json  2026-03-12_validation-5seed_after-optimization_legacy.md  2026-03-13_195144_eval_results.json  2026-03-13_195144_eval_results.md  2026-03-13_195144_eval_results_legacy.json  (+54 more)
db-backend/scripts/: backfill_mock_user_flags.py  cleanup_recommendation_users.py  discover_public_douban_candidates.py  evaluate_recommendations.py  expand_public_douban_users.py  export_cfkg_dataset.py  generate_mock_graph_ratings.py  import_public_douban_users.py  reseed_recommendation_users.py  screen_public_douban_users.py  seed_eval_real_users.py  train_cfkg.py  train_cfkg_reranker.py
db-backend/tests/: conftest.py  test_baseline_recommendations.py  test_cfkg_pipeline.py  test_cold_start.py  test_discover_public_douban_candidates.py  test_douban_public_import.py  test_expand_public_douban_users.py  test_graph_service.py  test_import_public_douban_users_cli.py  test_recommend_explain.py  test_recommend_legacy.py  test_recommendation_algorithms.py  test_recommendation_evaluator.py  test_recommendation_stability.py  test_recommendation_system.py  test_regressions.py  test_reseed_recommendation_users.py  test_screen_public_douban_users.py
db-spiders/: .env.example  README.md  crawl_movie.py  crawl_person.py  discover_movies.py  main.py  proxy_crawler.py  proxy_manager.py  pyproject.toml  rebuild_pid.py  recrawl_incomplete_movies.py  recrawl_incomplete_persons.py
db-spiders/db_spiders/: database.py  scrapy.cfg  util.py  validator.py
db-spiders/scripts/: check_db.py  monitor.py  monitor_person.py  reset_all_locks.py
db-spiders/sql/: add_crawl_status.sql  add_missing_fields.sql
(+108 files in other folders)
