[project]
name = "douban-kg-system"
version = "0.1.0"
description = "Douban movie knowledge graph system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=6.1.0",
    "pandas>=2.3.3",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
]

# uv workspace 配置
[tool.uv]
package = false

[tool.uv.workspace]
members = ["db-spiders", "db-backend"]

# 开发依赖
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff 配置
[tool.ruff]
line-length = 88 # 保持与 Black 一致的行宽

[tool.ruff.lint]
# 启用 Pyflakes (F), Pycodestyle (E, W), Isort (I), Naming (N)
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy 配置
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
