[project]
name = "db-backend"
version = "0.1.0"
description = "FastAPI backend for douban knowledge graph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.112.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "neo4j>=5.17.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "jieba>=0.42.1",
    "hanlp>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
