[project]
name = "db-spiders"
version = "0.1.0"
description = "Douban movie spider module using Scrapy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scrapy>=2.11.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "fake-useragent>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scrapy-splash>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest-twisted>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 适配 Scrapy 的目录结构
# Scrapy 默认创建的目录不是 src/ 结构，而是直接放在根目录下
# 如果不加这一段，Hatchling 可能找不到代码从而报错
[tool.hatch.build.targets.wheel]
packages = ["douban_spiders"]