[project]
name = "db-spiders"
version = "0.1.0"
description = "Douban movie spider module using Playwright"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.41.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest-twisted>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 适配当前目录结构
# 项目代码位于 db_spiders/ 目录
# 如果不加这一段，Hatchling 可能找不到代码从而报错
[tool.hatch.build.targets.wheel]
packages = ["db_spiders"]
